	identical permutations. We can then compare the change in model
	for each permutation and collect the test statistics for
	differences. This requires that the models really are nested so
	that residual deviance certainly decreases in bigger model
	(testing theory requires nesting, but this is commonly violated by
	users: here nesting is necessary). 
	
Version 2.1-36 (closed October 14, 2013)

	* opened with the release of vegan 2.0-9.

	* decostand(..., "normalize") uses now .Machine$double.eps to
	replace zero sum of squares instead of matrix minimum.

	* envfit: if a variable is constant, no fitted vector can be
	calculated and results will be given as NA (with warnings).
	Plotting of all vectors will fail in such cases because no finite
	scale was found for arrows. Fixed on ordiArrowMul.

	* envfit: try to produce something sensible if fitted variable has
	constant values (invariable vector, one-level factor). Report
	arrow heads as all zero, and R2=0 for vectors, and the centroid to
	the data centroid and R2=0 for factors. Tied values are now
	treated differently in factorfit: now they support null
	hypothesis, previously they decreased the P-values. 

	* fisherfit: completely rewritten and estimates of standard error
	removed: I could not find no justification for these. Actually, it
	seems that the value of Fisher alpha as estimated in the function
	was independent of the abundance distribution of species, but will
	be defined by the number of species (S) and number of individuals
	(N). Now the Fisher alpha is estimated from the relationship S =
	alpha*(1 + log(N/alpha)) using function uniroot(). Because of
	this, standard errors cannot be estimated and they were
	removed. In addition, functions confint.fisherfit,
	profile.fisherfit and plot.profile.fisherfit were removed. The
	estimation of standard errors was also removed in function
	fisher.alpha (that only calls fisherfit).

	* nestednodf: matrix fill was wrongly calculated in weighted