@@ -14,16 +14,17 @@
   \code{renyiaccum} finds these statistics with accumulating sites.
 }
 \usage{
-renyi(x, scales = c(0, 0.25, 0.5, 1, 2, 4, 8, 16, 32, 64, Inf), hill = FALSE)
+renyi(x, scales = c(0, 0.25, 0.5, 1, 2, 4, 8, 16, 32, 64, Inf),
+   hill = FALSE)
 \method{plot}{renyi}(x, ...)
 renyiaccum(x, scales = c(0, 0.5, 1, 2, 4, Inf), permutations = 100, 
-    raw = FALSE, ...)
-\method{plot}{renyiaccum} (x, what = c("mean", "Qnt 0.025", "Qnt 0.975"), type = "l", 
+    raw = FALSE, subset, ...)
+\method{plot}{renyiaccum}(x, what = c("mean", "Qnt 0.025", "Qnt 0.975"), type = "l", 
     ...)
-\method{persp}{renyiaccum} (x, theta = 220, col = heat.colors(100), zlim, ...)
+\method{persp}{renyiaccum}(x, theta = 220, col = heat.colors(100), zlim, ...)
 rgl.renyiaccum(x, rgl.height = 0.2, ...)
 }
-%- maybe also 'usage' for other objects documented here.
+
 \arguments{
   \item{x}{Community data matrix or plotting object. }
   \item{scales}{Scales of \enc{Rényi}{Renyi} diversity.}
@@ -33,6 +34,8 @@ rgl.renyiaccum(x, rgl.height = 0.2, ...)
   \item{raw}{if \code{FALSE} then return summary statistics of
     permutations, and if \code{TRUE} then returns the individual
     permutations.}
+  \item{subset}{logical expression indicating sites (rows) to keep: missing
+    values are taken as \code{FALSE}.}
   \item{what}{Items to be plotted.}
   \item{type}{Type of plot, where \code{type = "l"} means lines.}
   \item{theta}{Angle defining the viewing direction (azimuthal) in
